--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,4 +27,16 @@
         app:layout_constraintTop_toBottomOf="@+id/button"
         android:inputType="phone"
         android:layout_marginTop="30dp"/>
+
+    <EditText
+        android:id="@+id/editText2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/editText"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:text="Name" />
 </android.support.constraint.ConstraintLayout>
